[package]
name = "strom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.0", features = ["bevy_animation"] }
bevy_rapier2d = { version = "0.21.0", features = ["debug-render-2d"] }
rand = "0.8.5"
